minor change static page

--- a/app/views/editorial/contatti.html.erb
+++ b/app/views/editorial/contatti.html.erb
@@ -1,8 +1,9 @@
 <h2><%= l(:contact) %></h2>
 <script type="text/javascript">
-    $(function () {
-        $("#accordion").accordion();
-    });
+  //$(function () {
+  $(document).ready(function() {
+    $("#accordion").accordion();
+  });
 </script>
 <div class="prodotti_scheda_cont">
 <div id="accordion">
