--- a/app/views/editorial/lavora.html.erb
+++ b/app/views/editorial/lavora.html.erb
@@ -1,8 +1,9 @@
-<h2><%=l(:workon)%></h2>
+<h2><%=l(:label_workon)%></h2>
 <script type="text/javascript">
-    $(function () {
-        $("#tabs").tabs();
-    });
+  //$(function () {
+  $(document).ready(function() {
+    $("#tabs").tabs();
+  });
 </script>
 <div id="tabs">
   <ul>
