pagina servizi e nuovo font per gli articoli

--- a/app/views/editorial/servizi.html.erb
+++ b/app/views/editorial/servizi.html.erb
@@ -1,76 +1,52 @@
-<h2><%=l(:help)%></h2>
-  In questa pagina:
-  <ul> 
-    <li>How to ed informazioni per aiutare l'utente</li>
-  </ul> 
-<div class="footer">
-            <div style="margin-top: 8px" class="footer_contact">
-                <div class="footer_tel">
-                    <img src="images/footer_tel.png" id="ctl06_img_footer">
-                </div>
-                <div class="footer_call">
-                    Hai bisogno d’aiuto?! Telefonaci allo 075.9229776
-                  </div>
-                <div class="footer_social">
-                    <div style="margin-left: 130px" class="footer_social_img">
-                        <a target="_blank" href="http://www.youtube.com/user/MerciDolci">
-                        <img src="http://www.commercioetico.it/images/social_youtube.png">
-                        </a>
-                    </div>
-                    <div class="footer_social_img">
-                        <a target="_blank" href="http://twitter.com/#!/Commercio_Etico">
-                        <img src="http://www.commercioetico.it/images/social_twitter.png">
-                        </a>
-                    </div>
-                    <div class="footer_social_img">
-                        <a target="_blank" href="http://myworld.ebay.it/merci-dolci/">
-                        <img src="http://www.commercioetico.it/images/social_ebay.png">
-                        </a>
-                    </div>
-                    <div class="footer_social_img">
-                        <img src="http://www.commercioetico.it/images/social_rss.png">
-                    </div>
-                    <div class="footer_social_img">
-                        <a target="_blank" href="http://www.facebook.com/commercioetico">
-                        <img src="http://www.commercioetico.it/images/social_facebook.png">
-                        </a>
-                    </div>
-                </div>
+<div style="width: 100%">
+  <%= render :partial => 'blocco_prova_gratis' %>
+  <div class="fs-layout-cell post-layout-item-3" style="max-width: 640px; border-right: solid 10px transparent;">
+    <div class="fs-content-layout-row">
+      <article class="fs-post fs-article clearfix">
+        <%= image_tag("/images/commons/servizi-fiscosport.jpg", :alt => "Servizi alle associaziuoni",  :class => "fs-lightbox") %>
 
-            </div>
+        <h3 class="fs-postheader">I NOSTRI SERVIZI ALLE ASSOCIAZIONI</h3>
 
-            <div class="footer_menu">
-                <div class="footer_menu_comp">
-                    <div class="footer_menu_title">
-                        merci dolci s.r.l.
-                    </div>
-                    <div class="footer_menu_text">
-                        Commercioetico.it è un sito gestito da <br>
-                        Merci Dolci srl - sede legale: loc. S. Cristina, 14 - 06020 Gubbio (PG) - PI. 02635810548
-                    </div>
-                    <div class="footer_menu_link">
-                        <a class="Georgia16_Gray " href="http://www.commercioetico.it/contatti.aspx">contatti</a>&nbsp; |&nbsp;
-                        <a class="Georgia16_Gray " href="http://www.commercioetico.it/chisiamo.aspx">chi siamo</a>&nbsp; |&nbsp;
-                        <a class="Georgia16_Gray " href="http://www.commercioetico.it/faq.aspx">f.a.q.</a>
-                    </div>
-                </div>
-                
-                <div style="width: 570px; border: none" class="footer_menu_comp">
-                    <div style="width: 570px;" class="footer_menu_title">
-                        spedizioni ed ordini
-                    </div>
+        Fiscosport la migliore rivista  che tratta di argomenti fiscali in ambito sportivo.
+        Esiste solo in formato online ed è fruibile in toto tramite un abbonamento annule.
+        La sua Newsletter viene inviata all'abbonato con cadenza QUINDICINALE
+        e viene di norma inoltrata nella giornata del giovedì (1/11, 15/11, 29/11, 13/12), a mezzo e-mail, agli utenti
+        abilitati ai Servizi Fiscosport, direttamente o per tramite di un C.R. o C.P. CONI o di una Fsn/Dsa/Eps aderente
+        al progetto Fiscosport. Gli utenti non ancora registrati possono avvalersi dell'apposito link, sotto la maschera
+        "Accedi", in alto a destra del sito www.fiscosport.it (accessibile anche dal collegamento ipertestuale >> al
+        termine di ogni news).
+        <br/>
 
-                    <div style="width: 570px;" class="footer_menu_text">
-                        <a class="Verdana12" href="http://www.commercioetico.it/static/1/termini_e_condizioni.aspx">Termini e Condizioni</a> - 
-                        <a class="Verdana12" href="http://www.commercioetico.it/static/2/diritto_di_recesso.aspx">Diritto di Recesso</a> - 
-                        <a class="Verdana12" href="http://www.commercioetico.it/static/3/garanzie.aspx">Garanzie</a> - 
-                        <a class="Verdana12" href="http://www.commercioetico.it/static/4/pagamenti_e_spedizioni.aspx">Pagamenti e Spedizioni</a><br>
-                        <a class="Verdana12" href="http://www.commercioetico.it/static/5/privacy.aspx">Privacy</a> - 
-                        <a class="Verdana12" href="http://www.commercioetico.it/static/6/spedizioni_all_estero.aspx">Spedizioni all’Estero</a> - 
-                        <a class="Verdana12" href="http://www.commercioetico.it/static/7/il_nostro_lavoro.aspx">Il Nostro Lavoro</a> 
-                    </div>
-                   
-                </div>
-            </div>
-        
-        </div>
+        Lo sappiamo tutti, e da sempre lo andiamo dicendo anche noi di Fiscosport: gli adempimenti che le associazioni e
+        le società sportive sono chiamate ad osservare sono numerosi e non sempre di immediata comprensione e
+        attuazione. Per questo Riviste come la nostra non possono mancare su un computer o una scrivania di chi si
+        occupa da vicino di associazionismo sportivo. E' pur vero, tuttavia, che una cosa è la "grammatica", altro è la
+        "pratica"... e mai come oggi una gestione approssimativa comporta un rischio troppo alto per gli insostenibili
+        costi a cui eventuali errori possono esporre non solo l'ente ma soprattutto i loro rappresentanti! Il mondo
+        dello sport italiano vive, come è noto, grazie a un sistema in gran parte improntato sul volontariato o comunque
+        su modelli di organizzazione non imprenditoriali: è forse giusto pretendere da chi a quel mondo dedica tempo,
+        energie, spesso soldi, di assumersi enormi responsabilità senza che vengano offerti strumenti adeguati per
+        muoversi correttamente?
+
+        A nostro parere no. Ed è con questo spirito che è nata l'idea di una collaborazione tra Fiscosport e TeamArtist:
+        per fornire alle ASD un supporto autorevole per ogni dubbio legale/ fiscale/ contabile e, contemporaneamente,
+        uno strumento informatico sempre aggiornato e di altissimo livello per la gestione di tutte le piccole e grandi
+        incombenze quotidiane.
+
+        Per maggiori approfondimenti e per i dettagli dell'offerta esclusiva riservata ai nostri Lettori e Utenti
+        rinviamo alla lettura di questa news.
+
+        Auguriamo a tutti Voi un buon lavoro in questo ultimo scorcio d'anno, con la speranza che al nostro impegno per
+        sostenere e supportare a 360 gradi le associazioni e le società sportive che ci seguono corrisponda il Vostro
+        gradimento per la nuova iniziativa!
+
+
+        <br/>
+      </article>
+
+    </div>
+  </div>
+  <%= render :partial => 'blocco_sidebar0' %>
+
+
+</div>
