--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -16,7 +16,7 @@
   <!--[if lt IE 9]>  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <!--[if lte IE 7]><%= stylesheet_link_tag 'style.ie7.css', :media => 'screen' %><![endif]-->
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Quattrocento+Sans&amp;subset=latin">
-
+  <link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag 'rtl', :media => 'all' if l(:direction) == 'rtl' %>
   <%= stylesheet_link_tag 'application_fs', :media => 'all' %>
   <%= stylesheet_link_tag 'editorial', :media => 'all' %>
