--- a/app/views/editorial/_articolo_full.html.erb
+++ b/app/views/editorial/_articolo_full.html.erb
@@ -1,6 +1,6 @@
 <% if articolo %>
 
-  <h4 style="border-bottom: 1px dotted #A8ADB8; padding-bottom: 5px">
+  <h4  class="separticle">
     <%= @articolo.titolo %>
   </h4>
 
