--- a/app/views/editorial/_articolo_pinned.html.erb
+++ b/app/views/editorial/_articolo_pinned.html.erb
@@ -22,7 +22,7 @@
           %>
           <br/></div>
         <%# link_to "Continua... ", url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.titolo, :length => 125).to_slug), :escape => false) %>
-        <p style="border-bottom: 1px dotted #A8ADB8; padding-bottom: 5px"></p>
+        <p class="separticle"></p>
       </div>
     </div>
   </div>
