--- a/public/stylesheets/application_fs.css
+++ b/public/stylesheets/application_fs.css
@@ -306,3 +306,7 @@ box-shadow: 5px 5px rgba(80,122,170,0.1);
 #login-form input#username, #login-form input#password { width: 300px; }
 .abbosepsup{border-top: dotted 2px #DE4518; display: inline-block; width: 100%;}
 .raccomendazione{margin: 10px; padding: 10px; color: #FFCB49; background-color: #026086;}
+/*.separticle{border-top: 1px dotted #A8ADB8; padding-bottom: 2px;padding-top: 5px}*/
+.separticle{border-bottom: 1px dotted #A8ADB8; padding-bottom: 5px}
+.privacy{}
+.pri{}
