--- a/app/views/services/privacy.html.erb
+++ b/app/views/services/privacy.html.erb
@@ -18,6 +18,10 @@
         $( "#button" ).click(function(){
             $( ".newClass" ).switchClass( "newClass", "anotherNewClass", 1000 );
             $( ".anotherNewClass" ).switchClass( "anotherNewClass", "newClass", 1000 );
+            if (($("#button").text()) == "Non vedo bene")
+              $("#button").text("ok, ho capito...")
+            else
+              $("#button").text("Non vedo bene")
             return false;
         });
     });
