--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -66,7 +66,104 @@ color: #45535d;
     vertical-align:middle;
 }
 
+
 /* Post regole comuni */
+/*stilizzazione articolo in articolo_teaser */
+/*
+.fs-art-sezione {
+    background: #FBC737;
+   background: linear-gradient(top, #FAC01E 0, #FBCC4B 40%, #FBCC4B 50%, #FBCC4B 60%, #FAC01E 100%) no-repeat;
+   background: -webkit-linear-gradient(top, #FAC01E 0, #FBCC4B 40%, #FBCC4B 50%, #FBCC4B 60%, #FAC01E 100%) no-repeat;
+   background: -moz-linear-gradient(top, #FAC01E 0, #FBCC4B 40%, #FBCC4B 50%, #FBCC4B 60%, #FAC01E 100%) no-repeat;
+   background: -o-linear-gradient(top, #FAC01E 0, #FBCC4B 40%, #FBCC4B 50%, #FBCC4B 60%, #FAC01E 100%) no-repeat;
+   background: -ms-linear-gradient(top, #FAC01E 0, #FBCC4B 40%, #FBCC4B 50%, #FBCC4B 60%, #FAC01E 100%) no-repeat;
+   background: linear-gradient(top, #FAC01E 0, #FBCC4B 40%, #FBCC4B 50%, #FBCC4B 60%, #FAC01E 100%) no-repeat;
+   -svg-background: linear-gradient(top, #FAC01E 0, #FBCC4B 40%, #FBCC4B 50%, #FBCC4B 60%, #FAC01E 100%) no-repeat;
+    margin:0 auto;
+    position: relative;
+    z-index: 100;
+    text-align: left;
+    display:inline;
+    color: #8A311F;
+    border-left: 1px dotted #7C9CC0;
+    border-right: 4px dotted #7C9CC0;
+
+}
+*/
+.fs-art-sezione{
+    background: #016284;
+    color:#fff;
+    /*
+    background: linear-gradient(top, #FFFFFF 0, #80DDFF 100%) no-repeat;
+    background: -webkit-linear-gradient(top,#80DDFF 0, #d0e6e8 50%, #80DDFF 100%) no-repeat;
+    background: -moz-linear-gradient(top, #FFFFFF 0, #80DDFF 100%) no-repeat;
+    background: -o-linear-gradient(top, #FFFFFF 0, #80DDFF 100%) no-repeat;
+    background: -ms-linear-gradient(top, #FFFFFF 0, #80DDFF 100%) no-repeat;
+    background: linear-gradient(top, #FFFFFF 0, #80DDFF 100%) no-repeat;
+    -svg-background: linear-gradient(top, #FFFFFF 0, #80DDFF 100%) no-repeat;
+    */
+    -webkit-border-radius: 2px;
+    -moz-border-radius:2px;
+    border-radius:2px;
+    -webkit-box-shadow:0 0 2px 1px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow:0 0 2px 1px rgba(0, 0, 0, 0.4);
+    box-shadow:0 0 2px 1px rgba(0, 0, 0, 0.4);
+    border:1px solid #fff;
+    margin:0 auto;
+    display: inline-block;
+    position:relative;
+
+}
+.fs-art-sezione:after{
+    content: url('/images/template/angolo.png');
+    position: absolute;
+ line-height: 0px;
+    right: -14px;
+    top: -3px;
+    /*
+   background-image: url('/images/template/angolo.png');
+    background-repeat: no-repeat;
+    color:#fff;
+    width: 16px;
+    height: 16px;
+margin-left:-1px;*/
+
+}
+.fs-post-access-ok:before
+{
+   content:url('/images/template/post-access-ok.png');
+   margin-right:6px;
+   position:relative;
+   display:inline-block;
+   vertical-align:middle;
+   font-size:0;
+   line-height:0;
+   bottom: auto;
+}
+.opera .fs-post-access-ok:before
+{
+   /* Vertical-align:middle in Opera doesn't need additional offset */
+    bottom: 0;
+}
+.fs-post-access-no:before
+{
+   content:url('/images/template/post-access-no.png');
+   margin-right:6px;
+   position:relative;
+   display:inline-block;
+   vertical-align:middle;
+   font-size:0;
+   line-height:0;
+   bottom: auto;
+}
+.opera .fs-post-access-no:before
+{
+   /* Vertical-align:middle in Opera doesn't need additional offset */
+    bottom: 0;
+}
+
+
+/* altre personalizzazioni */
 
 
 .fs-content .fs-postcontent-1 .layout-item-0 {
